fixed bug where text was not centered in the main menu

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,10 +121,7 @@ body {
 }
 
 #textcontainer h1, p {
-    position: sticky;
     text-align: center;
-    margin-left: 50%;
-    margin-right: 5%;
 }
 #textcontainer h1 {
     text-decoration: underline;
